<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/aaa"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/max_count"
            android:id="@+id/item_dialog_count"
            android:inputType="number"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/aaa2"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/aaa">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/max_size"
            android:id="@+id/item_dialog_size"
            android:inputType="number"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/aaa2"
        app:layout_constraintRight_toRightOf="parent"
        android:background="?android:selectableItemBackground"
        android:text="@string/ok"
        android:id="@+id/btn_item_ok"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/aaa2"
        android:background="?android:selectableItemBackground"
        app:layout_constraintRight_toLeftOf="@id/btn_item_ok"
        android:layout_marginEnd="12dp"
        android:text="@string/cancel"
        android:id="@+id/btn_item_cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>