<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context=".screens.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <Switch
            android:id="@+id/switch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Night Mode"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textColor="?attr/white_black_color"
            android:layout_marginEnd="12dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/media_chooser"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:text="@string/image_chooser"
                android:textColor="?attr/white_black_color"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:textStyle="bold" />






        <androidx.cardview.widget.CardView
            android:id="@+id/card_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/setting_media"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:background="#00000000"
                    android:src="@drawable/ic_baseline_settings_24"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layout_media1" />

                <LinearLayout
                    android:id="@+id/layout_media1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">

                    <TextView
                        style="StyleCount"
                        android:layout_width="wrap_content"
                        android:textColor="?attr/white_black_color"
                        android:layout_height="wrap_content"
                        android:text="@string/count"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/media_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/_0"
                        android:textColor="?attr/white_black_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ch"
                        android:textColor="?attr/white_black_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/media_max_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_20"
                        android:textColor="?attr/white_black_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_media2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/layout_media1"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:text="@string/size"
                        android:textColor="?attr/white_black_color"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/media_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textColor="?attr/white_black_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ch"
                        android:textColor="?attr/white_black_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/media_max_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_20"
                        android:textColor="?attr/white_black_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_media2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/file_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/file_chooser"
            android:textColor="?attr/white_black_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="7dp">

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btn_file"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/add_file"
                        android:textColor="?attr/white_black_color"
                        app:icon="@drawable/ic_baseline_attach_file_24"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_file2" />

                    <ImageButton
                        android:id="@+id/setting_file"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:background="#00000000"
                        android:src="@drawable/ic_baseline_settings_24"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/layout_file" />

                    <LinearLayout
                        android:id="@+id/layout_file"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/count"
                            android:textColor="?attr/white_black_color"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/file_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@string/_0"
                            android:textColor="?attr/white_black_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ch"
                            android:textColor="?attr/white_black_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/file_max_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_20"
                            android:textColor="?attr/white_black_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_file2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/layout_file"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size"
                            android:textColor="?attr/white_black_color"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/file_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@string/_0"
                            android:textColor="?attr/white_black_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ch"
                            android:textColor="?attr/white_black_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/file_max_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_20"
                            android:textColor="?attr/white_black_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_file"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:layout_constraintTop_toBottomOf="@id/btn_file" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</ScrollView>